main headers and categories outline.

--- a/codewebsite/index.html
+++ b/codewebsite/index.html
@@ -60,6 +60,36 @@
             </div>
           </section>
 
+        <!-- Service Section -->
+         <section id="services" class="service-section">
+          <h2>Our services</h2>
+          <p>We offer a wide range of landscape designs, maintennance and installation of services.</p>
+          <!-- List of services here-->
+           <!-- TO DO LIST-->
+          </section>
+
+        <!-- About Section-->
+         <section id="about" class="about-section">
+          <h2> About RedStone Landscape Maintenance </h2>
+          <p> We are a dedicated to creating a beautiful outdoor space that perfectly meets your home needs.
+              Our team is passionate about delivering quality work that meets and exceeds your expectations.</p>
+          </p>
+         </section>
+
+
+         <!-- Contact Section-->
+          <section id="contact" class="contact-section"> 
+            <h2>Contact Us </h2>
+            <p> Have questions or eant a quote? Call us directly! </p>
+            <p> Phone: (702) 472-3518 </p>
+            <p> Email: redstonelandscapemaintenance@gmail.com </p>
+          </section>
+
+        <!-- Footer-->
+         <footer> 
+          <p> "Beautiful work in landscape to complete the client's dream design for their houses. </p>
+          <p> &copy; </p>
+         </footer>
     
         
     </main>
