--- a/codewebsite/index.html
+++ b/codewebsite/index.html
@@ -10,26 +10,28 @@
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-</head>
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto:wght@400;700&display=swap" rel="stylesheet"></head>
 
 <body>
   <!-- Navigation/Head -->
   <header>
-    <nav clas="navbar">
+    <nav class="navbar"> <!-- Fixed class typo -->
       <div class="logo">
-        <h1>RedStoneLandscape Maintenance</h1>
+        <h1>RedStone Landscape Maintenance</h1>
       </div>
       <ul class="nav-links">
-        <li><a href=#home>Home</a></li>
-        <li><a href=#services>Services</a></li>
-        <li><a href=#gallery>Gallery</a></li>
-        <li><a href=#about>About</a></li>
-        <li><a href=#contact>Contact</a></li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#gallery">Gallery</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
-      <a class="" quote-btn" href="#contact>">Free Quotes</a>
+      <a class="quote-btn" href="#contact">Free Quote</a> <!-- Fixed syntax -->
     </nav>
   </header>
+
+  <!-- Add font link in head -->
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
 
   <!-- Main Content -->
   <main>
@@ -38,24 +40,23 @@
       <h2>Transform your outdoor space </h2>
       <p>Professional Landscaping & Maintenance</p>
       <div class="hero-gallery">
-        <img src="images/gallert1.jpg" alt="Landscape Work 1" />
-        <img src="images/gallert2.jpg" alt="Landscape Work 2" />
-        <img src="images/gallert3.jpg" alt="Landscape Work 3" />
-        <img src="images/gallert3.jpg" alt="Landscape Work 4" />
+        <img src="images/gallery1.jpg" alt="Landscape Work 1" />
+        <img src="images/gallery2.jpg" alt="Landscape Work 2" />
+        <img src="images/gallery3.jpg" alt="Landscape Work 3" />
+        <img src="images/gallery4.jpg" alt="Landscape Work 4" />
       </div>
     </section>
+
 
     <!-- Before and After Section -->
     <section class="before-after-section">
       <h2>Before &amp; After</h2>
-      <div class="container">
-        <div class="ba-wrapper">
-          <img src="images/before.jpg" alt="Before" class="ba-image" />
-          <div class="ba-overlay">
-            <img src="images/after.jpg" alt="After" class="ba-image" />
-          </div>
-          <input type="range" min="0" max="100" value="50" class="slider" id="slider" />
+      <div class="ba-container">
+        <div class="image-container">
+          <img src="images/after2.jpg" class="ba-image before" alt="Before">
+          <img src="images/before2.jpg" class="ba-image after" alt="After">
         </div>
+        <input type="range" min="0" max="100" value="50" class="slider" id="slider">
       </div>
     </section>
 
@@ -93,15 +94,14 @@
 
   <!-- JAVASCRIPT for Before/After Slider -->
   <script>
-    const slider = document.getElementById("slider");
-    const baOverlay = document.querySelector(".ba-overlay");
+    const slider = document.getElementById('slider');
+    const afterImage = document.querySelector('.after');
 
-    slider.addEventListener("input", function () {
-      // Adjust the width of the overlay based on slider value
-      baOverlay.style.width = `${100 - this.value}%`;
+    slider.addEventListener('input', function() {
+        const value = this.value;
+        afterImage.style.clipPath = `inset(0 ${100 - value}% 0 0)`;
     });
-  </script>
-
+</script>
 </body>
 
 
