--- a/codewebsite/index.html
+++ b/codewebsite/index.html
@@ -20,21 +20,27 @@
 <body>
   <!-- Navigation/Head -->
   <header>
-    <nav class="navbar"> <!-- Fixed class typo -->
-      <div class="logo">
-        <h1>RedStone Landscape Maintenance</h1>
+    <nav class="navbar">
+      <div class="logo-container">
+        <a href="#home" class="logo">
+          <img src="logo.png" alt="Logo" class="logo-img"> 
+        </a>
+        <h1 class="company-name">RedStone Landscape Maintenance</h1>
+
       </div>
-      <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#gallery">Gallery</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-      <a class="quote-btn" href="#contact">Free Quote</a> <!-- Fixed syntax -->
+
+      <div class="nav-right">
+        <ul class="nav-links">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#gallery">Gallery</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+        <a class="quote-btn" href="#contact">Free Quote</a>
+      </div>
     </nav>
   </header>
-
   <!-- Add font link in head -->
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
 
@@ -159,6 +165,10 @@
 
   <!-- Footer-->
   <footer>
+    <div class="footer-logo">
+      <img src="logo.png" alt="Company Logo" class="logo-img">
+    </div>
+
     <p> "Beautiful work in landscape to complete the client's dream design for their houses. </p>
     <p> &copy; 2025 Redstone Landscape Maintenance. All rights reserved. </p>
   </footer>
